--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <img src="image/02.jpg" width="40%"> <br>
     <em>Gato alimentado</em> <br>
     <img src="image/03.jpg" width="40%"> <br>
-    
+    <em>Gato se reproduziu!</em><br>
+    <img src="image/04.jpg" width="40%"> <br>
 </body>
 </html>
